Atualiza footer - Gediel

--- a/custom-footer/footer.html
+++ b/custom-footer/footer.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <footer>
-        <img id="footer-template" src="/tetris/images/footer.svg"></img>
+        <img id="footer-template" src="../images/footer.svg"></img>
     </footer>
 </body>
 </html>
