--- a/home-page-game/home-page-game.html
+++ b/home-page-game/home-page-game.html
@@ -24,6 +24,8 @@
             <p>Mais difícil</p>
         </div>
     </div>
-
+    <footer>
+        <iframe src="../custom-footer/footer.html"></iframe>
+    </footer>
 </body>
 </html>
