--- a/about-project/about.html
+++ b/about-project/about.html
@@ -32,7 +32,10 @@
             <img src="../images/tetris-logo.svg" alt="tetris-logo"> 
             <p><strong>Fonte: </strong></p>
         </div>
-
+       
     </main>
+    <footer>
+        <img>
+    </footer>
 </body>
 </html>
