--- a/custom-footer/footer.html
+++ b/custom-footer/footer.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <footer>
-        <img id="footer-template" src="../images/footer.svg"></img>
+        <img src="../images/footer.svg">
     </footer>
 </body>
 </html>
