--- a/home-page-game/home-page-game.html
+++ b/home-page-game/home-page-game.html
@@ -23,9 +23,12 @@
             <h2>22 x 44</h2>
             <p>Mais difícil</p>
         </div>
-    </div>
+    </div> <!-- display-flex row -->
+    <button class="button yellow-button" id="button-rules" onclick="">
+        <a href="../game-rules/game-rules.html">Regras do Jogo</a>
+    </button>
     <footer>
-        <iframe src="../custom-footer/footer.html"></iframe>
+        <img>
     </footer>
 </body>
 </html>
