implementa atualizacoes na main.html e nos botoes na aplicacao

--- a/main.html
+++ b/main.html
@@ -10,10 +10,23 @@
 <body>
     <iframe src="header.html"></iframe>
 
-    <h1>apagar depois</h1>
-    <a href="home-page-game/home-page-game.html">apagar link</a>
-
+    <main>
 
     <img id="tetris-logo" src="images/tetris-logo.svg" alt="Imagem representando o logo do jogo tetris, onde uma peça do jogo contém o texto Tetris dentro"></img>
+
+        <div class="formulario">
+            <p class="pLogin">LOGIN</p>
+            <input type="text" name="username" id="username" class="username" placeholder="Username"/>
+            <input type="text" name="senha" id="senha" class="senha" placeholder="senha" />
+            <a href="#" class="botaoIndex">GO!</a>
+            <p class="pCadastre">OU <a class="aCadastre" href="#">cadastre-se</a></p>
+        </div>
+    </main>
+
+
+    <footer>
+        <img>
+    </footer>
+    
 </body>
 </html>
