--- a/alterar-perfil/alterar.html
+++ b/alterar-perfil/alterar.html
@@ -5,15 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="./register.css">
-    <title>Cadastro - Tetris</title>
+    <link rel="stylesheet" href="../alterar-perfil/alterar.css">
+    <title>Alterar Perfil - Tetris</title>
 </head>
 
 <body>
     <iframe src="../header.html"></iframe>
 
     <div class="title">
-        <h3>CADASTRO</h3>
+        <h3>Alterar Perfil</h3>
     </div>
 
     <div class="input-container">
@@ -31,19 +31,6 @@
         </div>
     </div>
     
-    <div id="buttonGO">
-        <a href="../main.html" class="botaoCadastro_e_alterarPerfil" >GO!</a>
-        <a class="aCadastre" href="../main.html">Já tenho conta!</a></p>
-    </div>
-
-    <!-- <div class="circulos">
-        <div class="circle1">
-        </div>
-        <div class="circle2">
-        </div>
-        <div class="circle3">
-        </div>
-    </div> -->
 </body>
 
 </html>
