--- a/main.html
+++ b/main.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Tetris</title>
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" href="./favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
 
 </head>
 <body>
-    <iframe src="header.html"></iframe>
+    <iframe src="./header.html"></iframe>
 
     <h1>apagar depois</h1>
     <a href="home-page-game/home-page-game.html">apagar link</a>
