Atualiza o footer e as urls corretamente

--- a/about-project/about.html
+++ b/about-project/about.html
@@ -34,8 +34,7 @@
         </div>
        
     </main>
-    <footer>
-        <img>
-    </footer>
+    <footer alt="Imagem com vários retângulos coloridos com as cores do arco-íris, contendo dentro de seus interiores diferentes peças tetris">
+    </footer> 
 </body>
 </html>
