--- a/game-rules/game-rules.html
+++ b/game-rules/game-rules.html
@@ -10,7 +10,7 @@
 
 <body>
 
-    <iframe src="/header.html"></iframe>
+    <iframe src="../header.html"></iframe>
 
     <div class="card">
         <h1>Regras do Jogo</h1>
@@ -31,7 +31,6 @@
         </ul>
     </div>
 </body>
-<footer>
-    <img>
-</footer>
+<footer alt="Imagem com vários retângulos coloridos com as cores do arco-íris, contendo dentro de seus interiores diferentes peças tetris">
+</footer> 
 </html>
