Atualiza o footer na main

--- a/main.html
+++ b/main.html
@@ -13,8 +13,7 @@
     <h1>apagar depois</h1>
     <a href="home-page-game/home-page-game.html">apagar link</a>
     <img id="tetris-logo" src="images/tetris-logo.svg" alt="Imagem representando o logo do jogo tetris, onde uma peça do jogo contém o texto Tetris dentro"></img>
-<footer >
-    <img>
-</footer>    
+    <footer alt="Imagem com vários retângulos coloridos com as cores do arco-íris, contendo dentro de seus interiores diferentes peças tetris">
+    </footer>      
 </body>
 </html>
