--- a/game/game.html
+++ b/game/game.html
@@ -15,7 +15,7 @@
     </header>
 
     <main>
-        <img src="../images/tetris-logo.svg" alt="letras-tetris" class="img_tetris"> 
+        <img src="../images/tetris.png" alt="letras-tetris" class="img_tetris"> 
 
         <div class="cards-esquerda">
             <div class="display-flex row">
