--- a/custom-folder/footer.html
+++ b/custom-folder/footer.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="footer.css">
 </head>
 <body>
     <footer>
-        <img id="footer-template" src="../images/footer.svg"></img>
+        <img src="../images/footer.svg">
     </footer>
 </body>
 </html>
