--- a/header.html
+++ b/header.html
@@ -9,7 +9,7 @@
     <header>
         <nav>
             <a href="main.html">Home</a>
-            <a href="/about-project/about.hmtl">Sobre</a>
+            <a href="/about-project/about.html">Sobre</a>
         </nav>
     </header>
 </body>
