--- a/about-project/about.html
+++ b/about-project/about.html
@@ -7,12 +7,7 @@
     <link rel="stylesheet" href="about.css">
 </head>
 <body>
-    <header>
-        <nav>
-            <a href="../main.html">Home</a>
-            <a href="about.html">Sobre</a>
-        </nav>
-    </header>
+    <iframe src="./header.html"></iframe>
 
     <main>
         <h1>SOBRE O PROJETO</h1>
