--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
 <body>
     <iframe src="./header.html"></iframe>
 
-    <main>
+    <div class="main">
 
     <img id="tetris-logo" src="images/tetris-logo.svg" alt="Imagem representando o logo do jogo tetris, onde uma peça do jogo contém o texto Tetris dentro"></img>
 
@@ -18,14 +18,18 @@
             <p class="pLogin">LOGIN</p>
             <input type="text" name="username" id="username" class="username" placeholder="Username"/>
             <input type="text" name="senha" id="senha" class="senha" placeholder="senha" />
-            <a href="#" class="botaoIndex">GO!</a>
-            <p class="pCadastre">OU <a class="aCadastre" href="#">cadastre-se</a></p>
+            <a href="./home-page-game/home-page-game.html" class="botaoIndex">GO!</a>
+            <p class="pCadastre">OU <a class="aCadastre" href="./sign-in-page/sign-in.html">cadastre-se</a></p>
         </div>
-    </main>
+    </div>
 
 
 <footer alt="Imagem com vários retângulos coloridos com as cores do arco-íris, contendo dentro de seus interiores diferentes peças tetris">
     </footer> 
     
 </body>
+
+<footer alt="Imagem com vários retângulos coloridos com as cores do arco-íris, contendo dentro de seus interiores diferentes peças tetris">
+</footer> 
+
 </html>
