--- a/about-project/about.html
+++ b/about-project/about.html
@@ -7,7 +7,12 @@
     <link rel="stylesheet" href="about.css">
 </head>
 <body>
-    <iframe src="./header.html"></iframe>
+    <header>
+        <nav>
+            <a href="../main.html">Home</a>
+            <a href="about-project/about.html">Sobre</a>
+        </nav>
+    </header>
 
     <main>
         <h1>SOBRE O PROJETO</h1>
