--- a/game-rules/game-rules.html
+++ b/game-rules/game-rules.html
@@ -7,12 +7,19 @@
     <link rel="stylesheet" href="game-rules.css">
     <title>Regras do Jogo</title>
 </head>
-
 <body>
 
-    <iframe src="../header.html"></iframe>
+    <header>
+        <nav>
+            <a href="../main.html">Home</a>
+            <a href="../about-project/about.html">Sobre</a>
+        </nav>
+    </header>
 
     <div class="card">
+        <div class="round-card">
+            <img src="../images/rules-icon.svg">
+        </div>
         <h1>Regras do Jogo</h1>
         <ul>
             <li><b>1 - Limpeza de Linhas:</b> Quando uma linha é completamente preenchida, ela é removida da grade.</li>
