--- a/main.html
+++ b/main.html
@@ -8,7 +8,12 @@
 
 </head>
 <body>
-    <iframe src="./header.html"></iframe>
+    <header>
+        <nav>
+            <a href="main.html">Home</a>
+            <a href="about-project/about.html">Sobre</a>
+        </nav>
+    </header>
 
     <div class="main">
 
@@ -17,9 +22,9 @@
         <div class="formulario">
             <p class="pLogin">LOGIN</p>
             <input type="text" name="username" id="username" class="username" placeholder="Username"/>
-            <input type="text" name="senha" id="senha" class="senha" placeholder="senha" />
+            <input type="text" name="senha" id="senha" class="senha" placeholder="Senha" />
             <a href="./home-page-game/home-page-game.html" class="botaoIndex">GO!</a>
-            <p class="pCadastre">OU <a class="aCadastre" href="./sign-in-page/sign-in.html">cadastre-se</a></p>
+            <p class="pCadastre">OU <a class="aCadastre" href="./register/register.html">cadastre-se</a></p>
         </div>
     </div>
 
