--- a/structure/structure.html
+++ b/structure/structure.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="/tetris/structure/structure.css">
 </head>
 <body>
-    <div class="card"></div>
+    <div class="card">
+        
+    </div>
 </body>
 </html>
