--- a/register/register.html
+++ b/register/register.html
@@ -10,7 +10,12 @@
 </head>
 
 <body>
-    <iframe src="../header.html"></iframe>
+    <header>
+        <nav>
+            <a href="main.html">Home</a>
+            <a href="about-project/about.html">Sobre</a>
+        </nav>
+    </header>
 
     <div class="title">
         <h3>CADASTRO</h3>
