--- a/game/game.html
+++ b/game/game.html
@@ -29,8 +29,8 @@
                 <h3 class="pink-text">3</h3>
             </div> 
 
-            <a href="../alterar-perfil/alterar.html" class="botaoPerfil">PERFIL</a>
-            <a href="../main.html" class="botaoSair">SAIR</a>
+            <a href="../alterar-perfil/alterar.html" class="botao botaoPerfil">PERFIL</a>
+            <a href="../main.html" class="botaoSair botao">SAIR</a>
         </div>
     
         <div class="jogo">
@@ -78,12 +78,12 @@
                 </div>
             </div> 
 
-            <a href="../global-ranking/global-ranking.html" class="botaoRankingGlobal">RANKING GLOBAL</a>
+            <a href="../global-ranking/global-ranking.html" class="botao botaoRankingGlobal">RANKING GLOBAL</a>
 
         </div>
 
     </div>
-    
+
     <footer alt="Imagem com vários retângulos coloridos com as cores do arco-íris, contendo dentro de seus interiores diferentes peças tetris">
     </footer> 
 </body>
