--- a/alterar-perfil/alterar.html
+++ b/alterar-perfil/alterar.html
@@ -30,5 +30,7 @@
             <input id="button-input" class="pink-button-input button" type="text" placeholder="Confirmar Senha">
         </div>
     </div>
+    <footer alt="Imagem com vários retângulos coloridos com as cores do arco-íris, contendo dentro de seus interiores diferentes peças tetris">
+    </footer> 
 </body>
 </html>
