--- a/register/register.html
+++ b/register/register.html
@@ -12,8 +12,8 @@
 <body>
     <header>
         <nav>
-            <a href="main.html">Home</a>
-            <a href="about-project/about.html">Sobre</a>
+            <a href="../main.html">Home</a>
+            <a href="../about-project/about.html">Sobre</a>
         </nav>
     </header>
 
