--- a/game-rules/game-rules.html
+++ b/game-rules/game-rules.html
@@ -16,27 +16,32 @@
         </nav>
     </header>
 
-    <div class="card">
-        <div class="round-card">
-            <img src="../images/rules-icon.svg">
+    <div class="rules">
+        <div class="card">
+            <div class="round-card">
+                <img src="../images/rules-icon.svg" alt="ícone de regras">
+            </div>
+            <h1>Regras do Jogo</h1>
+            <ul>
+                <li><b>1 - Limpeza de Linhas:</b> Quando uma linha é completamente preenchida, ela é removida da grade.</li>
+                <li><b>2 - Pontuação:</b> Os jogadores ganham pontos por cada linha que é limpa.</li>
+                <li><b>3 - Níveis de Dificuldade:</b> À medida que o tempo avança e o jogador limpa mais linhas, o nível de
+                    dificuldade aumenta, as peças caem mais rapidamente. Além disso, possível jogar em grades 10x20 e 22x44.</li>
+                <li><b>4 - Rotação de Peças:</b> As peças podem ser rotacionadas no sentido horário (teclas Z ou seta para cima) ou
+                    anti-horário (teclas S ou seta para baixo) permitindo que o jogador ajuste a posição das peças para
+                    encaixá-las na grade.</li>
+                <li><b>5 - Movimentação de Peças:</b> Use as setas esquerda e direita para movimentar as peças horizontalmente. Use as
+                    teclas A e D para movimentar para a esquerda e direita, respectivamente.</li>
+                <li><b>6 - Controle de Descida Rápida:</b> Pressione a tecla de espaço para fazer a peça cair rapidamente (soft drop).
+                </li>
+                <li><b>7 - Fim de Jogo: </b>O jogo termina se não houver espaço suficiente na grade para a próxima peça que está
+                    caindo.</li>
+            </ul>
         </div>
-        <h1>Regras do Jogo</h1>
-        <ul>
-            <li><b>1 - Limpeza de Linhas:</b> Quando uma linha é completamente preenchida, ela é removida da grade.</li>
-            <li><b>2 - Pontuação:</b> Os jogadores ganham pontos por cada linha que é limpa.</li>
-            <li><b>3 - Níveis de Dificuldade:</b> À medida que o tempo avança e o jogador limpa mais linhas, o nível de
-                dificuldade aumenta, as peças caem mais rapidamente. Além disso, possível jogar em grades 10x20 e 22x44.</li>
-            <li><b>4 - Rotação de Peças:</b> As peças podem ser rotacionadas no sentido horário (teclas Z ou seta para cima) ou
-                anti-horário (teclas S ou seta para baixo) permitindo que o jogador ajuste a posição das peças para
-                encaixá-las na grade.</li>
-            <li><b>5 - Movimentação de Peças:</b> Use as setas esquerda e direita para movimentar as peças horizontalmente. Use as
-                teclas A e D para movimentar para a esquerda e direita, respectivamente.</li>
-            <li><b>6 - Controle de Descida Rápida:</b> Pressione a tecla de espaço para fazer a peça cair rapidamente (soft drop).
-            </li>
-            <li><b>7 - Fim de Jogo: </b>O jogo termina se não houver espaço suficiente na grade para a próxima peça que está
-                caindo.</li>
-        </ul>
+
     </div>
+
+
 </body>
 <footer alt="Imagem com vários retângulos coloridos com as cores do arco-íris, contendo dentro de seus interiores diferentes peças tetris">
 </footer> 
