add button and remove unused code

--- a/game-rules/game-rules.html
+++ b/game-rules/game-rules.html
@@ -37,6 +37,8 @@
                 <li><b>7 - Fim de Jogo: </b>O jogo termina se não houver espaço suficiente na grade para a próxima peça que está
                     caindo.</li>
             </ul>
+
+            <a href="../home-page-game/home-page-game.html" class="botaoEntendiTudo">ENTENDI TUDO!</a>
         </div>
 
     </div>
