fix - validator html

--- a/about-project/about.html
+++ b/about-project/about.html
@@ -34,7 +34,7 @@
         </div>
        
     </main>
-    <footer alt="Imagem com vários retângulos coloridos com as cores do arco-íris, contendo dentro de seus interiores diferentes peças tetris">
+    <footer>
     </footer> 
 </body>
 </html>
