--- a/custom-footer/footer.html
+++ b/custom-footer/footer.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <link rel="stylesheet" href="footer.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="footer.css">
+    <title>Footer Tetris</title>
 </head>
 <body>
     <footer>
-        <img src="../images/footer.svg">
+        <img src="../images/footer.svg" alt="Imagem com vários retângulos coloridos com as cores do arco-íris, contendo dentro de seus interiores diferentes peças tetris">
     </footer>
 </body>
 </html>
