--- a/alterar-perfil/alterar.html
+++ b/alterar-perfil/alterar.html
@@ -23,23 +23,23 @@
 
     <div class="input-container">
         <div class="left-inputs">
-            <input id="button-input" class="pink-button-input button" type="text" placeholder="Nome Completo">
-            <input id="button-input" class="pink-button-input-disabled button" type="text" placeholder="CPF" readonly>
-            <input id="button-input" class="pink-button-input-disabled button" type="text" placeholder="Username" readonly>
-            <input id="button-input" class="pink-button-input button" type="text" placeholder="Senha">
+            <input id="name-input" class="pink-button-input button" type="text" placeholder="Nome Completo">
+            <input id="cpf-input" class="pink-button-input-disabled button" type="text" placeholder="CPF" readonly>
+            <input id="username-input" class="pink-button-input-disabled button" type="text" placeholder="Username" readonly>
+            <input id="senha-input" class="pink-button-input button" type="text" placeholder="Senha">
         </div>
         <div class="right-inputs">
-            <input id="button-input" class="pink-button-input-disabled button" type="text" placeholder="Data de Nascimento" readonly>
-            <input id="button-input" class="pink-button-input button" type="text" placeholder="Telefone">
-            <input id="button-input" class="pink-button-input button" type="text" placeholder="E-mail">
-            <input id="button-input" class="pink-button-input button" type="text" placeholder="Confirmar Senha">
+            <input id="date-input" class="pink-button-input-disabled button" type="text" placeholder="Data de Nascimento" readonly>
+            <input id="telephone-input" class="pink-button-input button" type="text" placeholder="Telefone">
+            <input id="email-input" class="pink-button-input button" type="text" placeholder="E-mail">
+            <input id="confirm-password-input" class="pink-button-input button" type="text" placeholder="Confirmar Senha">
         </div>
     </div>
 
     <div id="buttonGO">
         <a href="../main.html" class="botaoCadastro_e_alterarPerfil" >GO!</a>
     </div>
-    <footer alt="Imagem com vários retângulos coloridos com as cores do arco-íris, contendo dentro de seus interiores diferentes peças tetris">
+    <footer>
     </footer> 
 </body>
 </html>
