fix - validator html

--- a/game/game.html
+++ b/game/game.html
@@ -84,7 +84,6 @@
 
     </div>
 
-    <footer alt="Imagem com vários retângulos coloridos com as cores do arco-íris, contendo dentro de seus interiores diferentes peças tetris">
-    </footer> 
+    <footer></footer> 
 </body>
 </html>
