--- a/home-page-game/home-page-game.html
+++ b/home-page-game/home-page-game.html
@@ -16,7 +16,7 @@
     </header>
 
     <div class="display-flex row">
-        <img id="tetris-logo" src="../images/tetris-logo.svg" alt="Imagem representando o logo do jogo tetris, onde uma peça do jogo contém o texto Tetris dentro"></img>
+        <img id="tetris-logo" src="../images/tetris-logo.svg" alt="Imagem representando o logo do jogo tetris, onde uma peça do jogo contém o texto Tetris dentro">
         
         <div class="game-frame">
             <h1><a href="../game/game.html">Tabuleiro clássico</a></h1>
@@ -29,11 +29,7 @@
             <p>Mais difícil</p>
         </div>
     </div> 
-    <button class="button yellow-button" id="button-rules" onclick="">
-        <a href="../game-rules/game-rules.html">Regras do Jogo</a>
-    </button>
-    <footer>
-        <img>
-    </footer>
+    <a id="button-rules" class="yellow-button button" href="../game-rules/game-rules.html">Regras do Jogo</a>
+    <footer></footer>
 </body>
 </html>
