--- a/main.html
+++ b/main.html
@@ -17,20 +17,19 @@
 
     <div class="main">
 
-    <img id="tetris-logo" src="images/tetris-logo.svg" alt="Imagem representando o logo do jogo tetris, onde uma peça do jogo contém o texto Tetris dentro"></img>
+    <img id="tetris-logo" src="images/tetris-logo.svg" alt="Imagem representando o logo do jogo tetris, onde uma peça do jogo contém o texto Tetris dentro">
 
         <div class="formulario">
             <p class="pLogin">LOGIN</p>
-            <input type="text" name="username" id="username" class="username" placeholder="Username"/>
-            <input type="text" name="senha" id="senha" class="senha" placeholder="Senha" />
+            <input type="text" name="username" id="username" class="username" placeholder="Username">
+            <input type="password" name="senha" id="senha" class="senha" placeholder="Senha">
             <a href="./home-page-game/home-page-game.html" class="botaoIndex">GO!</a>
             <p class="pCadastre">OU <a class="aCadastre" href="./register/register.html">cadastre-se</a></p>
         </div>
     </div>
 
 
-<footer alt="Imagem com vários retângulos coloridos com as cores do arco-íris, contendo dentro de seus interiores diferentes peças tetris">
-    </footer> 
+<footer></footer> 
 </body>
 
 </html>
