--- a/register/register.html
+++ b/register/register.html
@@ -23,22 +23,22 @@
 
     <div class="input-container">
         <div class="left-inputs">
-            <input id="button-input" class="pink-button-input button" type="text" placeholder="Nome Completo">
-            <input id="button-input" class="pink-button-input button" type="text" placeholder="CPF">
-            <input id="button-input" class="pink-button-input button" type="text" placeholder="Username">
-            <input id="button-input" class="pink-button-input button" type="text" placeholder="Senha">
+            <input id="name-input" class="pink-button-input button" type="text" placeholder="Nome Completo">
+            <input id="cpf-input" class="pink-button-input button" type="text" placeholder="CPF">
+            <input id="username-input" class="pink-button-input button" type="text" placeholder="Username">
+            <input id="password-input" class="pink-button-input button" type="text" placeholder="Senha">
         </div>
         <div class="right-inputs">
-            <input id="button-input" class="pink-button-input button" type="text" placeholder="Data de Nascimento">
-            <input id="button-input" class="pink-button-input button" type="text" placeholder="Telefone">
-            <input id="button-input" class="pink-button-input button" type="text" placeholder="E-mail">
-            <input id="button-input" class="pink-button-input button" type="text" placeholder="Confirmar Senha">
+            <input id="date-input" class="pink-button-input button" type="text" placeholder="Data de Nascimento">
+            <input id="telephone-input" class="pink-button-input button" type="text" placeholder="Telefone">
+            <input id="email-input" class="pink-button-input button" type="text" placeholder="E-mail">
+            <input id="confirm-password-input" class="pink-button-input button" type="text" placeholder="Confirmar Senha">
         </div>
     </div>
     
     <div id="buttonGO">
         <a href="../main.html" class="botaoCadastro_e_alterarPerfil" >GO!</a>
-        <a class="aCadastre" href="../main.html">Já tenho conta!</a></p>
+        <a class="aCadastre" href="../main.html">Já tenho conta!</a>
     </div>
 </body>
 
