--- a/game-rules/game-rules.html
+++ b/game-rules/game-rules.html
@@ -43,8 +43,8 @@
 
     </div>
 
+    <footer></footer> 
 
 </body>
-<footer alt="Imagem com vários retângulos coloridos com as cores do arco-íris, contendo dentro de seus interiores diferentes peças tetris">
-</footer> 
+
 </html>
