Refactor and sources

--- a/about-project/about.html
+++ b/about-project/about.html
@@ -25,12 +25,17 @@
             Aline, Brenno, Gediel, Nathalia, Vinicius.
             </p>
             <br>
-            <p>Todas as imagens utilizadas de terceiros: </p>
+            <u>Todas as imagens utilizadas de terceiros: </u>
         </div>
 
         <div class="referencias">
-            <img src="../images/tetris-logo.svg" alt="tetris-logo"> 
-            <p><strong>Fonte: </strong></p>
+            <img src="../images/tetris-logo.svg" alt="logo do tetris"> 
+            <img src="../images/footer.svg" alt="footer em formato de tetris">
+            <p><strong>Fonte: </strong> https://tetris.com/about-us Tetris ® & © 1985~2023 Tetris Holding.
+                Tetris logos, Tetris theme song and Tetriminos are trademarks of Tetris Holding.
+                The Tetris trade dress is owned by Tetris Holding. Licensed to The Tetris Company.
+                Tetris Game Design by Alexey Pajitnov.
+                Tetris Logo Design by Roger Dean.</p>
         </div>
        
     </main>
