--- a/global-ranking/global-ranking.html
+++ b/global-ranking/global-ranking.html
@@ -153,7 +153,9 @@
 
                     
                 </div>
+                <a href="../home-page-game/home-page-game.html" class="botaoEntendiTudo">JOGAR</a>
             </div>
+
         </div>
 
         <footer></footer>
