--- a/about-project/about.html
+++ b/about-project/about.html
@@ -10,7 +10,7 @@
     <header>
         <nav>
             <a href="../main.html">Home</a>
-            <a href="about-project/about.html">Sobre</a>
+            <a href="#">Sobre</a>
         </nav>
     </header>
 
