--- a/global-ranking/global-ranking.html
+++ b/global-ranking/global-ranking.html
@@ -2,11 +2,11 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Global Ranking</title>
-    <link rel="stylesheet" href="global-ranking.css" />
+    <link rel="stylesheet" href="global-ranking.css">
 </head>
 
 <body>
@@ -20,7 +20,7 @@
     <div class="global-ranking">
         <div class="card">
             <div class="round-card">
-                <img src="../images/ranking.svg" alt="ícone de ranking" />
+                <img src="../images/ranking.svg" alt="ícone de ranking">
             </div>
 
             <h1>RANKING GLOBAL</h1>
