Botao Regras do Jogo

--- a/main.html
+++ b/main.html
@@ -21,8 +21,8 @@
 
         <div class="formulario">
             <p class="pLogin">LOGIN</p>
-            <input type="text" name="username" id="username" class="username" placeholder="Username">
-            <input type="password" name="senha" id="senha" class="senha" placeholder="Senha">
+            <input type="text" name="username" id="username" class="username" placeholder="username">
+            <input type="password" name="senha" id="senha" class="senha" placeholder="password">
             <a href="./home-page-game/home-page-game.html" class="botaoIndex">GO!</a>
             <p class="pCadastre">OU <a class="aCadastre" href="./register/register.html">cadastre-se</a></p>
         </div>
