--- a/botao/botao.html
+++ b/botao/botao.html
@@ -25,7 +25,7 @@
         <p>Botão Sair</p>
         <a href="#" class="botaoSair">SAIR</a>
 
-        <p>Botão Rnking Global</p>
+        <p>Botão Ranking Global</p>
         <a href="#" class="botaoRankingGlobal">RANKING GLOBAL</a>
 
         <p>Botão Entendi tudo</p>
@@ -33,8 +33,6 @@
 
         <p>Botão Jogar</p>
         <a href="#" class="botaoEntendiTudo">JOGAR</a>
-
-
 </div>
 </body>
 </html>
