--- a/register/register.html
+++ b/register/register.html
@@ -40,6 +40,9 @@
         <a href="../main.html" class="botaoCadastro_e_alterarPerfil" >GO!</a>
         <a class="aCadastre" href="../main.html">Já tenho conta!</a>
     </div>
+
+    <footer></footer> 
+    
 </body>
 
 </html>
